VerboseParser.js
// Generated from Verbose.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var VerboseListener = require('./VerboseListener').VerboseListener;
var grammarFileName = "Verbose.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'PUT THE NUMBER'", "'ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'REMOVE THE CURRENT ELEMENT OF THE PROGRAM STACK'", 
                     "'GET THE FIRST ELEMENT OF THE PROGRAM STACK AND DUPLICATE IT AND PUT THE RESULT ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'MOVE THE FIRST ELEMENT OF THE PROGRAM STACK TO THE SECOND ELEMENT'S PLACE AND THE SECOND ELEMENT OF THE STACK TO THE FIRST ELEMENT'S PLACE'", 
                     "'ADD THE FIRST ELEMENT OF THE PROGRAM STACK AND THE SECOND ELEMENT OF THE PROGRAM STACK TOGETHER AND PUT THE RESULT ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'SUBTRACT THE SECOND ELEMENT OF THE PROGRAM STACK FROM THE FIRST ELEMENT OF THE PROGRAM STACK AND PUT THE RESULT ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'MULTIPLY THE FIRST ELEMENT OF THE PROGRAM STACK BY THE SECOND ELEMENT OF THE PROGRAM STACK AND PUT THE RESULT ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'DIVIDE THE FIRST ELEMENT OF THE PROGRAM STACK BY THE SECOND ELEMENT OF THE PROGRAM STACK AND PUT THE RESULT ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'DIVIDE THE FIRST ELEMENT OF THE PROGRAM STACK BY THE SECOND ELEMENT OF THE PROGRAM STACK AND GET THE REMAINDER AND PUT THE REMAINDER ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'GET THE FIRST ELEMENT OF THE PROGRAM STACK AND THE SECOND ELEMENT OF THE PROGRAM STACK AND IF THE SECOND ELEMENT OF THE PROGRAM STACK IS NOT ZERO JUMP TO THE INSTRUCTION THAT IS THE CURRENT INSTRUCTION NUMBER AND THE FIRST ELEMENT ADDED TOGETHER'S RESULT'", 
                     "'GET A CHARACTER TYPED IN BY THE CURRENT PERSON USING THIS PROGRAM AND GET THE CHARACTER'S ASCII CODE AND PUT THE RESULT ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'GET A ROMAN NUMERAL TYPED IN BY THE CURRENT PERSON USING THIS PROGRAM AND PUT IT ONTO THE TOP OF THE PROGRAM STACK'", 
                     "'GET THE TOP ELEMENT OF THE STACK AND CONVERT IT TO AN ASCII CHARACTER AND OUTPUT IT FOR THE CURRENT PERSON USING THIS PROGRAM TO SEE'", 
                     "'GET THE TOP ELEMENT OF THE STACK AND OUTPUT IT FOR THE CURRENT PERSON USING THIS PROGRAM TO SEE'", 
                     "'M'", "'CD'", "'D'", "'CM'", "'C'", "'CC'", "'CCC'", 
                     "'XL'", "'L'", "'XC'", "'X'", "'XX'", "'XXX'", "'IV'", 
                     "'V'", "'IX'", "'I'", "'II'", "'III'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, "M", "CD", 
                      "D", "CM", "C", "CC", "CCC", "XL", "L", "XC", "X", 
                      "XX", "XXX", "IV", "V", "IX", "I", "II", "III", "WS" ];

var ruleNames =  [ "program", "statement", "push", "pop", "duplicate", "swap", 
                   "add", "subtract", "multiply", "divide", "modulo", "jump", 
                   "inputLetter", "inputNumber", "outputLetter", "outputNumber", 
                   "nr", "thousands", "thous_part", "hundreds", "hun_part", 
                   "hun_rep", "tens", "tens_part", "tens_rep", "ones", "ones_rep" ];

function VerboseParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

VerboseParser.prototype = Object.create(antlr4.Parser.prototype);
VerboseParser.prototype.constructor = VerboseParser;

Object.defineProperty(VerboseParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

VerboseParser.EOF = antlr4.Token.EOF;
VerboseParser.T__0 = 1;
VerboseParser.T__1 = 2;
VerboseParser.T__2 = 3;
VerboseParser.T__3 = 4;
VerboseParser.T__4 = 5;
VerboseParser.T__5 = 6;
VerboseParser.T__6 = 7;
VerboseParser.T__7 = 8;
VerboseParser.T__8 = 9;
VerboseParser.T__9 = 10;
VerboseParser.T__10 = 11;
VerboseParser.T__11 = 12;
VerboseParser.T__12 = 13;
VerboseParser.T__13 = 14;
VerboseParser.T__14 = 15;
VerboseParser.M = 16;
VerboseParser.CD = 17;
VerboseParser.D = 18;
VerboseParser.CM = 19;
VerboseParser.C = 20;
VerboseParser.CC = 21;
VerboseParser.CCC = 22;
VerboseParser.XL = 23;
VerboseParser.L = 24;
VerboseParser.XC = 25;
VerboseParser.X = 26;
VerboseParser.XX = 27;
VerboseParser.XXX = 28;
VerboseParser.IV = 29;
VerboseParser.V = 30;
VerboseParser.IX = 31;
VerboseParser.I = 32;
VerboseParser.II = 33;
VerboseParser.III = 34;
VerboseParser.WS = 35;

VerboseParser.RULE_program = 0;
VerboseParser.RULE_statement = 1;
VerboseParser.RULE_push = 2;
VerboseParser.RULE_pop = 3;
VerboseParser.RULE_duplicate = 4;
VerboseParser.RULE_swap = 5;
VerboseParser.RULE_add = 6;
VerboseParser.RULE_subtract = 7;
VerboseParser.RULE_multiply = 8;
VerboseParser.RULE_divide = 9;
VerboseParser.RULE_modulo = 10;
VerboseParser.RULE_jump = 11;
VerboseParser.RULE_inputLetter = 12;
VerboseParser.RULE_inputNumber = 13;
VerboseParser.RULE_outputLetter = 14;
VerboseParser.RULE_outputNumber = 15;
VerboseParser.RULE_nr = 16;
VerboseParser.RULE_thousands = 17;
VerboseParser.RULE_thous_part = 18;
VerboseParser.RULE_hundreds = 19;
VerboseParser.RULE_hun_part = 20;
VerboseParser.RULE_hun_rep = 21;
VerboseParser.RULE_tens = 22;
VerboseParser.RULE_tens_part = 23;
VerboseParser.RULE_tens_rep = 24;
VerboseParser.RULE_ones = 25;
VerboseParser.RULE_ones_rep = 26;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitProgram(this);
	}
};




VerboseParser.ProgramContext = ProgramContext;

VerboseParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, VerboseParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 54;
            this.statement();
            this.state = 57; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << VerboseParser.T__0) | (1 << VerboseParser.T__2) | (1 << VerboseParser.T__3) | (1 << VerboseParser.T__4) | (1 << VerboseParser.T__5) | (1 << VerboseParser.T__6) | (1 << VerboseParser.T__7) | (1 << VerboseParser.T__8) | (1 << VerboseParser.T__9) | (1 << VerboseParser.T__10) | (1 << VerboseParser.T__11) | (1 << VerboseParser.T__12) | (1 << VerboseParser.T__13) | (1 << VerboseParser.T__14))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.push = function() {
    return this.getTypedRuleContext(PushContext,0);
};

StatementContext.prototype.pop = function() {
    return this.getTypedRuleContext(PopContext,0);
};

StatementContext.prototype.duplicate = function() {
    return this.getTypedRuleContext(DuplicateContext,0);
};

StatementContext.prototype.swap = function() {
    return this.getTypedRuleContext(SwapContext,0);
};

StatementContext.prototype.add = function() {
    return this.getTypedRuleContext(AddContext,0);
};

StatementContext.prototype.subtract = function() {
    return this.getTypedRuleContext(SubtractContext,0);
};

StatementContext.prototype.multiply = function() {
    return this.getTypedRuleContext(MultiplyContext,0);
};

StatementContext.prototype.divide = function() {
    return this.getTypedRuleContext(DivideContext,0);
};

StatementContext.prototype.modulo = function() {
    return this.getTypedRuleContext(ModuloContext,0);
};

StatementContext.prototype.jump = function() {
    return this.getTypedRuleContext(JumpContext,0);
};

StatementContext.prototype.inputLetter = function() {
    return this.getTypedRuleContext(InputLetterContext,0);
};

StatementContext.prototype.inputNumber = function() {
    return this.getTypedRuleContext(InputNumberContext,0);
};

StatementContext.prototype.outputLetter = function() {
    return this.getTypedRuleContext(OutputLetterContext,0);
};

StatementContext.prototype.outputNumber = function() {
    return this.getTypedRuleContext(OutputNumberContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitStatement(this);
	}
};




VerboseParser.StatementContext = StatementContext;

VerboseParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, VerboseParser.RULE_statement);
    try {
        this.state = 73;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case VerboseParser.T__0:
            this.enterOuterAlt(localctx, 1);
            this.state = 59;
            this.push();
            break;
        case VerboseParser.T__2:
            this.enterOuterAlt(localctx, 2);
            this.state = 60;
            this.pop();
            break;
        case VerboseParser.T__3:
            this.enterOuterAlt(localctx, 3);
            this.state = 61;
            this.duplicate();
            break;
        case VerboseParser.T__4:
            this.enterOuterAlt(localctx, 4);
            this.state = 62;
            this.swap();
            break;
        case VerboseParser.T__5:
            this.enterOuterAlt(localctx, 5);
            this.state = 63;
            this.add();
            break;
        case VerboseParser.T__6:
            this.enterOuterAlt(localctx, 6);
            this.state = 64;
            this.subtract();
            break;
        case VerboseParser.T__7:
            this.enterOuterAlt(localctx, 7);
            this.state = 65;
            this.multiply();
            break;
        case VerboseParser.T__8:
            this.enterOuterAlt(localctx, 8);
            this.state = 66;
            this.divide();
            break;
        case VerboseParser.T__9:
            this.enterOuterAlt(localctx, 9);
            this.state = 67;
            this.modulo();
            break;
        case VerboseParser.T__10:
            this.enterOuterAlt(localctx, 10);
            this.state = 68;
            this.jump();
            break;
        case VerboseParser.T__11:
            this.enterOuterAlt(localctx, 11);
            this.state = 69;
            this.inputLetter();
            break;
        case VerboseParser.T__12:
            this.enterOuterAlt(localctx, 12);
            this.state = 70;
            this.inputNumber();
            break;
        case VerboseParser.T__13:
            this.enterOuterAlt(localctx, 13);
            this.state = 71;
            this.outputLetter();
            break;
        case VerboseParser.T__14:
            this.enterOuterAlt(localctx, 14);
            this.state = 72;
            this.outputNumber();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PushContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_push;
    return this;
}

PushContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PushContext.prototype.constructor = PushContext;

PushContext.prototype.nr = function() {
    return this.getTypedRuleContext(NrContext,0);
};

PushContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterPush(this);
	}
};

PushContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitPush(this);
	}
};




VerboseParser.PushContext = PushContext;

VerboseParser.prototype.push = function() {

    var localctx = new PushContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, VerboseParser.RULE_push);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75;
        this.match(VerboseParser.T__0);
        this.state = 76;
        this.nr();
        this.state = 77;
        this.match(VerboseParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PopContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_pop;
    return this;
}

PopContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PopContext.prototype.constructor = PopContext;


PopContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterPop(this);
	}
};

PopContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitPop(this);
	}
};




VerboseParser.PopContext = PopContext;

VerboseParser.prototype.pop = function() {

    var localctx = new PopContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, VerboseParser.RULE_pop);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 79;
        this.match(VerboseParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DuplicateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_duplicate;
    return this;
}

DuplicateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DuplicateContext.prototype.constructor = DuplicateContext;


DuplicateContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterDuplicate(this);
	}
};

DuplicateContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitDuplicate(this);
	}
};




VerboseParser.DuplicateContext = DuplicateContext;

VerboseParser.prototype.duplicate = function() {

    var localctx = new DuplicateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, VerboseParser.RULE_duplicate);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this.match(VerboseParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SwapContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_swap;
    return this;
}

SwapContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SwapContext.prototype.constructor = SwapContext;


SwapContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterSwap(this);
	}
};

SwapContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitSwap(this);
	}
};




VerboseParser.SwapContext = SwapContext;

VerboseParser.prototype.swap = function() {

    var localctx = new SwapContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, VerboseParser.RULE_swap);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 83;
        this.match(VerboseParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AddContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_add;
    return this;
}

AddContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AddContext.prototype.constructor = AddContext;


AddContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterAdd(this);
	}
};

AddContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitAdd(this);
	}
};




VerboseParser.AddContext = AddContext;

VerboseParser.prototype.add = function() {

    var localctx = new AddContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, VerboseParser.RULE_add);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 85;
        this.match(VerboseParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SubtractContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_subtract;
    return this;
}

SubtractContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubtractContext.prototype.constructor = SubtractContext;


SubtractContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterSubtract(this);
	}
};

SubtractContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitSubtract(this);
	}
};




VerboseParser.SubtractContext = SubtractContext;

VerboseParser.prototype.subtract = function() {

    var localctx = new SubtractContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, VerboseParser.RULE_subtract);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this.match(VerboseParser.T__6);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MultiplyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_multiply;
    return this;
}

MultiplyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MultiplyContext.prototype.constructor = MultiplyContext;


MultiplyContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterMultiply(this);
	}
};

MultiplyContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitMultiply(this);
	}
};




VerboseParser.MultiplyContext = MultiplyContext;

VerboseParser.prototype.multiply = function() {

    var localctx = new MultiplyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, VerboseParser.RULE_multiply);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 89;
        this.match(VerboseParser.T__7);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DivideContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_divide;
    return this;
}

DivideContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DivideContext.prototype.constructor = DivideContext;


DivideContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterDivide(this);
	}
};

DivideContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitDivide(this);
	}
};




VerboseParser.DivideContext = DivideContext;

VerboseParser.prototype.divide = function() {

    var localctx = new DivideContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, VerboseParser.RULE_divide);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this.match(VerboseParser.T__8);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ModuloContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_modulo;
    return this;
}

ModuloContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuloContext.prototype.constructor = ModuloContext;


ModuloContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterModulo(this);
	}
};

ModuloContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitModulo(this);
	}
};




VerboseParser.ModuloContext = ModuloContext;

VerboseParser.prototype.modulo = function() {

    var localctx = new ModuloContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, VerboseParser.RULE_modulo);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this.match(VerboseParser.T__9);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JumpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_jump;
    return this;
}

JumpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JumpContext.prototype.constructor = JumpContext;


JumpContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterJump(this);
	}
};

JumpContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitJump(this);
	}
};




VerboseParser.JumpContext = JumpContext;

VerboseParser.prototype.jump = function() {

    var localctx = new JumpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, VerboseParser.RULE_jump);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(VerboseParser.T__10);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InputLetterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VerboseParser.RULE_inputLetter;
    return this;
}

InputLetterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InputLetterContext.prototype.constructor = InputLetterContext;


InputLetterContext.prototype.enterRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.enterInputLetter(this);
	}
};

InputLetterContext.prototype.exitRule = function(listener) {
    if(listener instanceof VerboseListener ) {
        listener.exitInputLetter(this);
	}
};




VerboseParser.InputLetterContext = InputLetterContext;
